# sudoku-project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.backend  README.md  docker-compose.yml
apps/sudoku-api/: CMakeLists.txt
apps/sudoku-api/src/: main.cpp
apps/sudoku-cli/: CMakeLists.txt
apps/sudoku-cli/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: SudokuBoard.hpp  SudokuGenerator.hpp  SudokuSolver.hpp
engine/src/: SudokuBoard.cpp  SudokuGenerator.cpp  SudokuSolver.cpp
frontend/: app.js  index.html  style.css
include/: SolverStats.hpp  SudokuBoard.hpp  SudokuService.hpp  SudokuSolver.hpp
src/: SudokuBoard.cpp  SudokuService.cpp  SudokuSolver.cpp  main.cpp
tests/: test_board.cpp  test_solver.cpp
